--- a/src/App.css
+++ b/src/App.css
@@ -26,6 +26,7 @@
   color: white;
 }
 
+
 .App {
   text-align: center;
   color: red;
@@ -39,9 +40,9 @@
 
 @media (prefers-reduced-motion: no-preference) {
   .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-    height: 250px;
-    width: 220px;
+    /*animation: App-logo-spin infinite 20s linear;*/
+    height: 200px;
+    width: 300px;
     background-color: 'transparent';
   }
 }
@@ -82,7 +83,7 @@
 	cursor:pointer;
 	color:rgb(255, 255, 255);
 	font-family:Arial;
-	font-size:13px;
+	font-size:24px;
 	padding:10px 24px;
 	text-decoration:none;  
 }
@@ -95,3 +96,30 @@
 	top:1px;
 }
 
+.footer {  
+  position: absolute;  
+  font-size: medium;
+  left: 10px;  
+  bottom: 5px;  
+  right: 10px;   
+  width: 95%;  
+  background-color: rgb(168, 74, 74);  
+  color: white;  
+  text-align: center;
+  padding-top: 3px;
+  padding-bottom: 3px;  
+  }
+  
+.AboutText {
+  position: relative;
+  font-size: large;
+  padding-left: 10px;
+  padding-right: 10px;
+  padding-top: 10px;
+
+}
+.images {
+  background-color: transparent;
+  animation: App-logo-spin infinite 15s linear;
+
+}
