--- a/src/App.css
+++ b/src/App.css
@@ -1,3 +1,4 @@
+
 /* Add a black background color to the top navigation */
 .topnav {
   background-color: black;
@@ -36,6 +37,7 @@
 .App-logo {
   height: 40vmin;
   pointer-events: none;
+  background-color: 'transparent';
 }
 
 @media (prefers-reduced-motion: no-preference) {
@@ -73,6 +75,12 @@
   }
 }
 
+.photo{
+  height: 200;
+  width: 200;
+  background-color: white;
+}
+
 .myButton {
 	box-shadow:inset 0px 1px 0px 0px #ff0000;
 	background:linear-gradient(to bottom, #ff0000 5%, rgb(188, 21, 21) 100%);
@@ -97,12 +105,12 @@
 }
 
 .footer {  
-  position: absolute;  
+  position: fixed;  
   font-size: medium;
-  left: 10px;  
-  bottom: 5px;  
-  right: 10px;   
-  width: 95%;  
+  left: 0;  
+  bottom: 0;  
+  right: 0;   
+  width: 100%;  
   background-color: rgb(168, 74, 74);  
   color: white;  
   text-align: center;
@@ -112,7 +120,7 @@
   
 .AboutText {
   position: relative;
-  font-size: large;
+  font-size: x-large;
   padding-left: 10px;
   padding-right: 10px;
   padding-top: 10px;
@@ -123,3 +131,10 @@
   animation: App-logo-spin infinite 15s linear;
 
 }
+
+video {
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
+}
+
