--- a/src/Survey.css
+++ b/src/Survey.css
@@ -1,4 +1,4 @@
-body {
+body{
     background-color: #ffffff;
     display: flex;
     flex-direction: column;
@@ -7,24 +7,39 @@ body {
 
   .question-app {
     background-color: #d30101;
-    width: 450px;
+    width: device-width;
     min-height: 200px;
-    height: min-content;
+    min-width: 200px;
     border-radius: 15px;
     padding: 20px;
     box-shadow: 10px 10px 42px 0px rgba(0, 0, 0, 0.75);
-    display: flex;
+    display: center;
     justify-content: center;
   }
+
+  .question-result{
+      background-color: #d30101;
+      width: 450px;
+      min-height: 200px;
+      min-width: 200px; 
+      border-radius: 15px;
+      padding: 20px;
+      box-shadow: 10px 10px 42px 0px rgba(0, 0, 0, 0.75);
+      display: flex;
+      justify-content: center;
+      position: right;
+      
+    }
   
   /* QUESTION/TIMER/LEFT SECTION */
   .question-section {
-    width: 110%;
+    width: 100%;
     position: relative;
   }
   
   .question-count {
     margin-bottom: 20px;
+    color: white;
   }
   
   .question-count > span {
@@ -34,8 +49,14 @@ body {
   .question-text {
     margin-bottom: 12px;
     color: white;
+    font-size:28px;
   }
-  
+
+  .result{
+    display: flex;
+    color: white;
+  }
+
   .timer-text {
     background: rgb(230, 153, 12);
     padding: 15px;
@@ -49,6 +70,7 @@ body {
   /* ANSWERS/RIGHT SECTION */
   .answer-section {
     width: 100%;
+    height: 80%;
     display: flex;
     flex-direction: column;
     justify-content: space-evenly;
@@ -69,7 +91,7 @@ body {
   }
   
   button:hover {
-    background-color: #555e7d;
+    background-color: rgb(116, 6, 6);
   }
   
   button:focus {
